--- a/flask/app/templates/stockmenu.html
+++ b/flask/app/templates/stockmenu.html
@@ -14,8 +14,8 @@
                 <span class="material-icons" style="font-size: 2rem; color: #FFF">arrow_back_ios_new</span> 
             </a> 
         </div>
-    
         <div class="row">
+            <span class="recName"></span>
             <span>Stock Menu</span>
         </div>
         <div class="column">
