--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -1,7 +1,9 @@
+*{
+   font-family: 'Inter', sans-serif;
+}
 a { 
    color: #000000;
    text-decoration: none ;
-   font-family: 'Inter', sans-serif;
 }
 img{
    margin-left: 10px;
@@ -64,11 +66,19 @@ img{
    font-size: 30px;
    position: relative;
 	cursor: pointer;
-	transition-duration: 0.5s;
+	transition-duration: 0.25s;
 }
 
+.recName {
+    width: 4px;
+    height: 40px;
+    padding: 4px;
+    margin-right: 10px;
+    background: white;
+    border: 1px solid white;
+}
 .nav-box:hover{
-   background-color: #F3F4F6;
+    background-color: lightgray;
 }
 
 .category-icon {
