--- a/flask/app/templates/adminlist.html
+++ b/flask/app/templates/adminlist.html
@@ -25,65 +25,129 @@
             <div class="row split-3-12">
             </div>
         </div>
-        <form action="">
-            <div class="row">
-                <div class="row split-6-12">
-                    <p class="left-align input-box">Pongpop Pongsuk</p>
-                </div>
-                <div class="row split-3-12">
-                    <input type="checkbox" class="left-align" checked>
-                </div>
-                <div class="row split-3-12">
-                    <button class="confirm-button btm-btn del-btn">Revoke admin</button>
-                </div>
+        <div class="row" id="admin1">
+            <div class="row split-6-12">
+                <p class="left-align input-box">Pongpop Pongsuk</p>
             </div>
-            <div class="row">
-                <div class="row split-6-12">
-                    <p class="left-align input-box">Thanom Kongjai</p>
-                </div>
-                <div class="row split-3-12">
-                    <input type="checkbox" class="left-align">
-                </div>
-                <div class="row split-3-12">
-                    <button class="confirm-button btm-btn del-btn">Revoke admin</button>
-                </div>
+            <div class="row split-3-12">
+                <input type="checkbox" class="left-align" disabled checked>
             </div>
-            <div class="row">
-                <div class="row split-6-12">
-                    <p class="left-align input-box">Sutthiphong Surak</p>
-                </div>
-                <div class="row split-3-12">
-                    <input type="checkbox" class="left-align">
-                </div>
-                <div class="row split-3-12">
-                    <button class="confirm-button btm-btn del-btn">Revoke admin</button>
-                </div>
+            <div class="row split-3-12">
+                <button onclick="DelAdmin('admin1')" class="confirm-button btm-btn del-btn dis-btn" disabled>
+                    <img class="icon" src="../static/ico/bin.png" alt="Delete admin">
+                </button>
             </div>
-            <div class="row">
-                <div class="row split-6-12">
-                    <p class="left-align input-box">Nichapha Nillaor</p>
-                </div>
-                <div class="row split-3-12">
-                    <input type="checkbox" class="left-align">
-                </div>
-                <div class="row split-3-12">
-                    <button class="confirm-button btm-btn del-btn">Revoke admin</button>
-                </div>
+        </div>
+        <div class="row" id="admin2">
+            <div class="row split-6-12">
+                <p class="left-align input-box">Thanom Kongjai</p>
             </div>
-            <div class="row">
-                <div class="row split-6-12">
-                    <button class="left-align btm-btn add-btn">+ Grant new admin</button>
-                </div>
-                <div class="row split-3-12">
-                </div>
-                <div class="row split-3-12">
-                </div>
+            <div class="row split-3-12">
+                <input type="checkbox" class="left-align">
             </div>
-            <div class="row">
-                <button class="btm-btn">PrintQR</button>
-                <button class="confirm-button btm-btn">Confirm</button>
+            <div class="row split-3-12">
+                <button onclick="DelAdmin('admin2')" class="confirm-button btm-btn del-btn">
+                    <img class="icon" src="../static/ico/bin.png" alt="Delete admin">
+                </button>
             </div>
+        </div>
+        <div class="row" id="admin3">
+            <div class="row split-6-12">
+                <p class="left-align input-box">Sutthiphong Surak</p>
+            </div>
+            <div class="row split-3-12">
+                <input type="checkbox" class="left-align">
+            </div>
+            <div class="row split-3-12">
+                <button onclick="DelAdmin('admin3')" class="confirm-button btm-btn del-btn">
+                    <img class="icon" src="../static/ico/bin.png" alt="Delete admin">
+                </button>
+            </div>
+        </div>
+        <div class="row" id="admin4">
+            <div class="row split-6-12">
+                <p class="left-align input-box">Nichapha Nillaor</p>
+            </div>
+            <div class="row split-3-12">
+                <input type="checkbox" class="left-align">
+            </div>
+            <div class="row split-3-12">
+                <button onclick="DelAdmin('admin4')" class="confirm-button btm-btn del-btn">
+                    <img class="icon" src="../static/ico/bin.png" alt="Delete admin">
+                </button>
+            </div>
+        </div>
+        <form id="editor" method="post">
         </form>
+        <div class="row">
+            <div class="row split-6-12">
+                <button name="e-h1" onclick="NewAdmin()" class="left-align btm-btn add-btn">+ New admin</button>
+            </div>
+            <div class="row split-3-12">
+            </div>
+            <div class="row split-3-12">
+            </div>
+        </div>
+        <div class="row">
+            <button class="btm-btn">PrintQR</button>
+            <form method="post">
+            </form>
+            <button class="confirm-button btm-btn">Confirm</button>
+            <form method="post">
+            </form>
+        </div>
     </div>
 </body>
 </html>
+<script>
+    var i = 4;
+    function NewAdmin() {
+        i = i + 1;
+        var div1 = document.createElement("div");
+        var div21 = document.createElement("div");
+        var div22 = document.createElement("div");
+        var div23 = document.createElement("div");
+        var text_in = document.createElement("input");
+        var input1 = document.createElement("input");
+        var button1 = document.createElement("button");
+        var img1 = document.createElement("img");
+        // div(class) {}
+        div1.setAttribute("class", "row");
+        div1.setAttribute("id", `admin${i}`);
+        // div(class) { p(class; text) }
+        div21.setAttribute("class", "row split-6-12");
+        text_in.setAttribute("type", "text")
+        text_in.setAttribute("placeholder", "Input CMU mail here!")
+        text_in.setAttribute("class", "input-box")
+        div21.append(text_in);
+        // div(class) { div(class) { p(class; text) } }
+        div1.append(div21);
+        // div(class) { input(class; text) }
+        div22.setAttribute("class", "row split-3-12");
+        input1.setAttribute("class", "left-align");
+        input1.setAttribute("type", "checkbox");
+        input1.setAttribute("disabled", true);
+        div22.append(input1);
+        // div(class) { div(class) { input(class; text) } }
+        div1.append(div22);
+        // div(class) { button(class; text) }
+        div23.setAttribute("class", "row split-3-12");
+        button1.setAttribute("class", "confirm-button btm-btn del-btn");
+        button1.setAttribute("onclick", "DelAdmin('admin" + `${i}` + "')");
+        img1.setAttribute("class", "icon");
+        img1.setAttribute("src", "../static/ico/bin.png");
+        img1.setAttribute("alt", "Delete admin");
+        button1.append(img1);
+        div23.append(button1);
+        // div(class) { div(class) { button(class; text) { img (class, src, alt) } } }
+        div1.append(div23);
+
+        document.getElementById("editor").append(div1);
+    }
+    function DelAdmin(admin_id) {
+        const elementToRemove = document.getElementById(admin_id);
+        if (elementToRemove) {
+            elementToRemove.remove();
+        }
+    }
+</script>
