--- a/flask/app/static/css/loginB.css
+++ b/flask/app/static/css/loginB.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Pridi', serif;
+  /* font-family: 'Inter', sans-serif; */
   background: linear-gradient(#F9FAFB, #FFF);
   display: flex;
   justify-content: center;
