--- a/flask/app/static/css/setting.css
+++ b/flask/app/static/css/setting.css
@@ -1,8 +1,20 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     background: linear-gradient(#F9FAFB, #FFF);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Pridi', serif;
+    margin: 0;
+    transition: background 0.2s linear;
+    /* font-family: 'Inter', sans-serif; */
+}
+
+body.dark{
+    color: #fff;
+    background: #292c35;
 }
 
 .top-bar{
@@ -22,14 +34,53 @@ body{
 }
 
 .profile span{
-    font-size: 5rem;
+    font-size: 10rem;
 }
 
 .item{
-    padding: 14px 20px;
+    display: flex;
+    align-items: end;
+    border-bottom: 2px solid #eee;
+    padding: 20px 20px;
 }
 
 .item span{
-    font-size: 2rem;
+    font-size: 1.25rem;
     font-weight: 300;
+}
+
+.label {
+    background-color: #111;
+    border-radius: 50px;
+    display: flex;
+    position: relative;
+    width: 14vw;
+    height: 4vh;
+    padding: 5px;
+}
+
+.checkbox{
+    position: absolute;
+    opacity: 0;
+}
+
+.checkbox:checked + .label .ball{
+    transform: translateX(24px);
+}
+
+.moon{
+    color: #f1c40f;
+}
+
+.sun{
+    color: #f39c12;
+}
+
+.ball{
+    background-color: #fff;
+    position: absolute;
+    border-radius: 50%;
+    width: 6vw;
+    height: 6vw;
+    transition: transform 0.1s linear;
 }
