--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -1,7 +1,8 @@
 a { 
    color: #000000;
    text-decoration: none ;
-   font-family: 'Inter', sans-serif;
+   font-family: 'Pridi', serif;
+   /* font-family: 'Inter', sans-serif; */
 }
 img{
    margin-left: 10px;
