--- a/flask/app/templates/setting.html
+++ b/flask/app/templates/setting.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/setting.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Setting Page</title>
 </head>
@@ -18,12 +21,30 @@
         <span class="material-icons">account_circle</span>
     </div>
 
-    <div class="item">
-        <div>
+    <div class="bar">
+        <div class="item">
             <span class="material-icons">contrast</span>
             <span>Appearance</span>
+            <input type="checkbox" class="checkbox" id="checkbox">
+            <label for="checkbox" class="label">
+                <i class="material-icons moon">dark_mode</i>
+                <i class="material-icons sun">sunny</i>
+                <div class="ball"></div>
+            </label>
+        </div>
+
+        <div class="item">
+            <span class="material-icons">language</span>
+            <span>Language</span>
         </div>
     </div>
 
 </body>
 </html>
+<script>
+    const checkbox = document.getElementById('checkbox');
+
+    checkbox.addEventListener('change',() => {
+        document.body.classList.toggle('dark');
+    });
+</script>
