--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -1,10 +1,33 @@
+:root{
+  --basebg--color: linear-gradient(#e1caca, #FFF);
+  --base--color: #fff;
+  --text--color: #000;
+  --border--color: gray;
+  --hover--color: gray;
+}
+
+.darkmode{
+  --basebg--color: linear-gradient(#070b1d, #282c40);
+  --base--color: #282c40;
+  --text--color: #fff;
+  --border--color: gray;
+  --hover--color: gray;
+}
+
+svg{
+  color: var(--text--color);
+  fill: var(--text--color);
+}
+
+
 body {
-    background: linear-gradient(#F9FAFB, #FFF);
+    background: var(--basebg--color);
+    color: var(--text--color);
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
-    font-family: 'Pridi', serif;
-    /* font-family: 'Inter', sans-serif; */
+    /* font-family: 'Pridi', serif; */
+    font-family: 'Inter', sans-serif;
   }
   
   .top-bar {
@@ -12,8 +35,13 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 15px 20px;
-    flex-wrap: wrap; 
-    gap: 10px;
+  }
+  
+  .action-wrapper {
+    display:flex;
+    align-items: center;
+    gap: 12px;
+    margin-left: auto;
   }
   
   .profile-wrapper {
@@ -24,18 +52,18 @@ body {
   
   .profile-circle {
     display: flex;
-    width: 60px;
-    height: 60px;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
-    background-color: white;
+    background-color: var(--base--color);
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
   }
   
   .profile {
-    width: 40px;
-    height: 40px;
+    width: 3rem;
+    height: 3rem;
     object-fit: cover;
   }
   
@@ -44,13 +72,14 @@ body {
     flex-direction: column;
     line-height: 1.2;
     font-size: 0.9rem;
+    color: var(--text--color);
   }
   
 
   .notification-circle {
-    width: 60px;
-    height: 60px;
-    background-color: white;
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--base--color);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -58,15 +87,16 @@ body {
     position: relative;
   }
   
-  .notification {
-    width: 30px;
-    height: 30px;
+  .notification svg{
+    width: 2rem;
+    height: 2rem;
     cursor: pointer;
     transition: transform 0.2s ease;
   }
   
   .notification:hover {
     transform: scale(1.1);
+    fill: var(--hover--color);
   }
   
   .notification-badge {
@@ -74,7 +104,7 @@ body {
     top: 5px;
     right: 5px;
     background: red;
-    color: white;
+    color: var(--base--color);
     font-size: 12px;
     padding: 2px 6px;
     border-radius: 50%;
@@ -86,10 +116,10 @@ body {
     width: 90%;
     display: flex;
     align-items: center;
-    border: 1px solid lightgray;
+    border: var(--border--color);
     padding: 10px;
     border-radius: 30px;
-    background-color: white;
+    background-color: var(--base--color);
     margin: 20px auto;
   }
   
@@ -104,14 +134,14 @@ body {
     border: none;
     font-size: 1rem;
     outline: none;
-    background-color: white;
+    background-color: var(--base--color);
     padding-left: 3%;
   }
   
   .category-container {
     width: 90%;
-    border: 1px solid gray;
-    background-color: white;
+    border: var(--border--color);
+    background-color: var(--base--color);
     border-radius: 25px;
     display: flex;
     gap: 15px;
@@ -120,6 +150,10 @@ body {
     justify-content: space-around;
     flex-wrap: wrap;
     box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+  }
+
+  .category span{
+    color: var(--text--color);
   }
   
   .category-container div {
@@ -157,34 +191,30 @@ body {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 70px;
-    background-color: white;
+    height: 60px;
+    background-color: var(--base--color);
     display: flex;
     justify-content: space-around;
     align-items: center;
     box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    padding: 10px;
   }
   
   .nav-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #6B7280;
-    font-size: 12px;
+    color: var(--text--color);
+    font-size: 0.75rem;
   }
   
-  .nav-item img {
-    width: 35px;
-    height: 35px;
-    margin-bottom: 4px;
+  .nav-item svg {
+    width: 2rem;
+    height: 2rem;
   }
   
-  .nav-item.active {
-    color: #3B82F6;
-  }
-
   .topused-container{
     display: flex;
     justify-content: center;
@@ -194,7 +224,70 @@ body {
     width: 60%;
     height: 40%;
   }
+
+  #language-switch{
+    height: 3rem;
+    width: 3rem;
+    padding: 0;
+    border-radius: 50%;
+    background: none;
+    /* background-color: var(--base--color); */
+    color: var(--text--color);
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: none;
+  }
+
+  #language-switch span{
+    color: var(--text-color);
+    font-size: 1.5rem;
+  }
   
+  #language-switch span:last-child{
+    display: none;
+  }
+
+  .th #language-switch span:first-child{
+    display: none;
+  }
+
+  .en #language-switch span:last-child{
+    display: block;
+  }
+
+  #theme-switch{
+    height: 3rem;
+    width: 3rem;
+    padding: 0;
+    border-radius: 50%;
+    background-color: var(--base--color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: none;
+  }
+
+  #theme-switch svg{
+    color: var(--text-color);
+    width: 2rem;
+    height: 2rem;
+  }
+
+  #theme-switch svg:last-child{
+    display:none;
+  }
+  
+  .darkmode #theme-switch svg:first-child{
+    display: none;
+  }
+  
+  .darkmode #theme-switch svg:last-child{
+    display: block;
+  }
 
   @media (max-width: 768px) {
     .profile-text {
