--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -7,58 +7,69 @@
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/home.css">
+    <script type="text/javascript" src="../templates/darkmode.js" defer></script>
+    <script type="text/javascript" src="../templates/language.js" defer></script>
     <title>Home page</title>
 </head>
-<body>
+<body class="">
     <div class="top-bar">
         <div class="profile-wrapper">
             <div class="profile-circle">
-                <a href="{{ url_for('setting') }}">
-                    <img src="../static/ico/profile.png" class="profile"> 
-                </a>
+                <!-- <a href="{{ url_for('setting') }}"> -->
+                <svg class="profile" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/></svg>                <!-- </a> -->
             </div>
             <div class="profile-text">
                 <span>Welcome!<br></span>
                 <span>John Doe</span>
             </div>
         </div>
-
         
-        <div class="notification-wrapper notification-circle">
-            <img src="../static/ico/notification.png" class="notification">
-            <span class="notification-badge">3</span>
+        <div class="action-wrapper">
+            <button id="language-switch">
+                <span>TH</span>
+                <span>EN</span>
+            </button>
+
+            <button id="theme-switch">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
+            </button>
+
+            <div class="notification-circle notification">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160ZM480-80q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80Z"/></svg>            
+                <span class="notification-badge">3</span>
+            </div>
         </div>
     </div>
     
-
     <div class="search-container">
-        <img src="../static/ico/search_icon.png">
-        <input type="search" class="search-input" id="search-input" name="query" placeholder="Search...">
+        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/></svg>
+        <input type="search" class="search-input" id="search-input" name="query" placeholder="Search">
     </div>
     
     <div class="category-container">
-        <div>
+        <div class="category">
             <button class="circle-button">
             <img src="../static/ico/stock.png" alt="stock">
         </button>
             <span>Stock</span>
         </div>
         
-        <div>
+        <div class="category">
             <button class="circle-button">
                 <img src="../static/ico/stock.png" alt="stock">
             </button>
             <span>Stock</span>
         </div>
 
-        <div>
+        <div class="category">
             <button class="circle-button">
                 <img src="../static/ico/stock.png" alt="stock">
             </button>
             <span>Stock</span>
         </div>
 
-        <div>
+        <div class="category"> 
             <button class="circle-button">
                 <img src="../static/ico/stock.png" alt="stock">
             </button>
@@ -73,27 +84,21 @@
     <div class="bottom-nav">
         <div class="nav-item">
             <a href="{{ url_for('stockmenu') }}">
-            <img src="../static/ico/stock.png">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M200-80q-33 0-56.5-23.5T120-160v-451q-18-11-29-28.5T80-680v-120q0-33 23.5-56.5T160-880h640q33 0 56.5 23.5T880-800v120q0 23-11 40.5T840-611v451q0 33-23.5 56.5T760-80H200Zm-40-600h640v-120H160v120Zm200 280h240v-80H360v80Z"/></svg>
             </a>
             <span>Stock</span>
         </div>
         <div id="qr-scan" class="nav-item">
-            <img src="../static/ico/qr_icon.png">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M80-680v-200h200v80H160v120H80Zm0 600v-200h80v120h120v80H80Zm600 0v-80h120v-120h80v200H680Zm120-600v-120H680v-80h200v200h-80ZM700-260h60v60h-60v-60Zm0-120h60v60h-60v-60Zm-60 60h60v60h-60v-60Zm-60 60h60v60h-60v-60Zm-60-60h60v60h-60v-60Zm120-120h60v60h-60v-60Zm-60 60h60v60h-60v-60Zm-60-60h60v60h-60v-60Zm240-320v240H520v-240h240ZM440-440v240H200v-240h240Zm0-320v240H200v-240h240Zm-60 500v-120H260v120h120Zm0-320v-120H260v120h120Zm320 0v-120H580v120h120Z"/></svg>
             <span>QR Scan</span>
         </div>
         <div class="nav-item">
             <a href="{{ url_for('adminlist') }}">
-            <img src="../static/ico/person_add2.png">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M720-400v-120H600v-80h120v-120h80v120h120v80H800v120h-80Zm-360-80q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM40-160v-112q0-34 17.5-62.5T104-378q62-31 126-46.5T360-440q66 0 130 15.5T616-378q29 15 46.5 43.5T680-272v112H40Z"/></svg>
             </a>
             <span>Manage Admin</span>
         </div>
-    </div>
-
-    <div class="topused-container">
-        <img src="../static/img/pen.webp">
-    </div>
-
-    
+    </div>    
     
 </body>
 </html>
