--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -1,5 +1,5 @@
 :root{
-  --basebg--color: linear-gradient(#e1caca, #FFF);
+  --basebg--color: linear-gradient(#efcdcd, #FFF);
   --base--color: #fff;
   --text--color: #000;
   --border--color: gray;
