--- a/flask/app/templates/cart.html
+++ b/flask/app/templates/cart.html
@@ -9,7 +9,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="darkmode">
+    <script src="/js/darkmode.js"></script>
+    <script>
+        const darkmode = localStorage.getItem('darkmode');
+        if(darkmode === 'active') {
+          document.body.classList.add('darkmode');
+        } else {
+          document.body.classList.remove('darkmode');
+        }
+    </script>
     <div class="top-bar">
         <a href="{{ url_for('category') }}"> 
         <span class="material-icons">arrow_back_ios_new</span>
